--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -665,6 +665,8 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
   100%{transform-origin:top center;transform:rotateX(0deg);}
 }
 
-/* slide deals */
-
+/* all_deals */
+.all_wrap{}
+.all_wrap .all_hotdeals, .all_wrap .all_promocodes{margin:0 1% 20px 1%;}
+.all_wrap .all_hotdeals span, .all_wrap .all_promocodes em{margin-top:20px;display:block;}
 
