before adding store deals

--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -4,7 +4,7 @@
 
   <div class="deals_main_menu clearfix">
     <ul>
-      <li class="nth_1"><a href="">Amazon's Bargain <!-- <span>|</span> --> </a></li>
+      <li class="nth_1"><a href="">All Deals <!-- <span>|</span> --> </a></li>
       <!-- <li class="nth_2"><a href="">Discover more deals</a></li> -->
     </ul>    
   </div>
@@ -21,7 +21,7 @@
           <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01">( Was: <%= number_to_currency(promocode.p_spare_26) %></span><span class="span_02"> | <%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF with Promo Code [ <%= promocode.p_promocode %> ])</span></p>
           <a target="_blank" href="<%= promocode.p_link %>">[ 할인코드 사용하기 ]</a><br /><br />        
         <% end %>
-      <em>더 많은 아마존 할인코드는 <a target="_blank" href="www.ohigottabuythis.net/promocodes">www.ohigottabuythis.net/hotdeals</a></em>
+      <em>더 많은 아마존 할인코드는 <a target="_blank" href="www.ohigottabuythis.net/promocodes">www.ohigottabuythis.net/promocodes</a></em>
     </div>
 
     <hr>
