--- a/app/views/deals/_body_stores.html.erb
+++ b/app/views/deals/_body_stores.html.erb
@@ -6,7 +6,17 @@
     <div class="st_left clearfix">
       
       <h2>LEFT DEALS & SALES</h2>
-      <div class="st_box clearfix">
+      <% @promotion.each do |promo| %>
+        <div class="st_box clearfix">
+          <div class="st_image"><img src="<%= promo.sp_image %>" alt="" title=""></div>
+          <div class="inner">
+            <p><em class="st_title"><%= promo.sp_store_name %></em> | <%= promo.sp_title %></p>
+            <span><%= promo.sp_description %></span>
+          </div>
+        </div>
+      <% end %>
+
+<!--       <div class="st_box clearfix">
         <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
         <div class="inner">
           <p><em class="st_title">Ann Taylor</em> |세일 신발 추가 40%~60% off</p>
@@ -44,7 +54,7 @@
           <p>Ann Taylor |세일 신발 추가 40%~60% off</p>
           <span>Extra 40%~60% off Sale Shoes</span>
         </div>
-      </div>
+      </div> -->
 
       <div class="more_btn"><p>SEE MORE</p></div>
 
@@ -53,6 +63,17 @@
     <div class="st_right clarfix">
       
       <h2>RIGHT DEALS & SALES</h2>
+
+      <% @promotion_with_code.each do |promo| %>
+        <div class="st_box clearfix">
+          <div class="st_image"><img src="<%= promo.sp_image %>" alt="" title=""></div>
+          <div class="inner">
+            <p><em class="st_title"><%= promo.sp_store_name %></em> | <%= promo.sp_title %></p>
+            <span><%= promo.sp_description %></span>
+          </div>
+        </div>
+      <% end %>
+      
       <div class="st_box clearfix">
         <div class="st_image"><img src="https://pbs.twimg.com/profile_images/715852271389655041/s-VdeDI5_400x400.jpg" alt="" title=""></div>
         <div class="inner">
