--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -21,7 +21,7 @@
           <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01">( Was: <%= number_to_currency(promocode.p_spare_26) %></span><span class="span_02"> | <%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF with Promo Code [ <%= promocode.p_promocode %> ])</span></p>
           <a target="_blank" href="<%= promocode.p_link %>">[ 할인코드 사용하기 ]</a><br /><br />        
         <% end %>
-      <em>더 많은 아마존 할인코드는 <a target="_blank" href="www.ohigottabuythis.net/promocodes">www.ohigottabuythis.net/promocodes</a></em>
+      <em>더 많은 아마존 할인코드는 <a target="_blank" href="/promocodes">www.ohigottabuythis.net/promocodes</a></em>
     </div>
 
     <hr>
@@ -35,7 +35,7 @@
           number_to_percentage(hotdeal.h_percentage, precision: 0) %> OFF)</p>
           <a target="_blank" href="<%= hotdeal.h_link %>">[ 핫딜 바로가기 ]</a><br /><br />
         <% end %>
-      <span>더 많은 아마존 핫딜은 <a target="_blank" href="www.ohigottabuythis.net/hotdeals">www.ohigottabuythis.net/hotdeals</a></span>
+      <span>더 많은 아마존 핫딜은 <a target="_blank" href="/hotdeals">www.ohigottabuythis.net/hotdeals</a></span>
     </div>
 
   </div>
