--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -151,12 +151,11 @@
 .code_main div button{position:absolute;height:100%;width:95px;right:0;top:0;background:#000;border:none;outline:none;color:#fff;cursor:pointer;}
 .code_main div button:active{background:#003580;transform:scale(0.9);}
 .icon-copy{font-size:11px;position:relative;top:-1px;margin-right:2px;}
-.confirmation{background:#feba01;color:#383838;padding:10px 15px;border-radius:3px;display:none;z-index:999;width:300px;text-align:center;}
+.confirmation{background:#feba01;color:#383838;padding:10px 15px;border-radius:3px;display:none;z-index:999;position:fixed;bottom:20px;left:20px;text-align:center;}
 
 @media screen and (max-width:640px){
   .code_main div{width:100%;}
-  .code_main button{width:100%;}
-  .confirmation{width:100%;}
+  .code_main button{width:100%;margin-top:10px;}
 }
 
 
