--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -31,7 +31,7 @@
 .tab-menu-text{width:100%;margin-top:10px;cursor:pointer;padding:3px 5px;transition:400ms all;}
 /*.tab-menu-text:hover{background:rgba(0,0,0,.4);}*/
 .tab-menu-img img{width:50px;height:50px;overflow:hidden;float:left;/*border-radius:100%;*/}
-.tab-menu-text-title{color:#000;white-space: nowrap;text-overflow: ellipsis;overflow:hidden;padding-right:15px;font-size:15px;position:relative;left:10px;top:0;}
+.tab-menu-text-title{color:#000;white-space: nowrap;text-overflow:ellipsis;overflow:hidden;padding-right:15px;font-size:15px;position:relative;left:10px;top:0;}
 .tab-menu-text-alt{color:#000;font-size:15px;position:relative;left:10px;top:5px;margin-bottom:10px;}
 .tab-menu-text-alt span{}
 .tab-menu-text-alt span em{text-decoration:line-through;color:#616161;margin-right:1px;font-size:13px;}
@@ -39,13 +39,21 @@
 
 
 /* Store Promotions */
-.sp_wrap{margin-top:35px;}
-.sp_wrap .sp_left{float:left;width:25%;margin-right:2%;}
+.sp_wrap{margin-top:35px;font-family: 'Montserrat', sans-serif;}
+.sp_wrap .sp_left{float:left;width:25%;margin-right:2%;border:1px solid #ccc;border-radius:10px;padding:10px 10px 10px 20px;}
 .sp_wrap .sp_right{float:left;width:73%;}
 
 .sp_wrap .sp_right .sp_card{margin-bottom:20px;border-bottom:1px solid #ccc;padding-bottom:10px;}
-.sp_wrap .sp_right .sp_image{float:left;width:30%;margin-right:5%;}
-.sp_wrap .sp_right .sp_image img{width:100%;height:70px;object-fit:cover;}
-.sp_wrap .sp_right .inner{float:left;width:65%;}
+.sp_wrap .sp_right .sp_card .admin{font-size:12px;}
+.sp_wrap .sp_right .sp_image{float:left;width:15%;}
+.sp_wrap .sp_right .sp_image img{width:100%;height:70px;object-fit:contain;}
+.sp_wrap .sp_right .inner{float:left;width:59%;margin:0 3%;}
+.sp_wrap .sp_right .inner .sp_title{margin:5px 0;font-weight:500;line-height:1.2;font-size:18px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2}
+.sp_wrap .sp_right .inner .sp_code{margin-bottom:5px;}
+.sp_wrap .sp_right .inner em{font-size:12px;color:#616161;}
+/*.sp_wrap .sp_right .inner .btn{margin-top:10px;}
+.sp_wrap .sp_right .inner .btn a{text-decoration:none;background:#000;color:#fff;padding:5px 20px;border-radius:10px;}*/
+.sp_wrap .sp_right .sp_btn{float:left;width:20%;position:relative;height:130px;}
+.sp_wrap .sp_right .sp_btn a{text-decoration:none;background:#000;color:#fff;padding:20px;border-radius:10px;display:block;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);width:100%;}
 
 
