--- a/app/views/deals/_body_promocodes.html.erb
+++ b/app/views/deals/_body_promocodes.html.erb
@@ -7,6 +7,7 @@
      <% else %>
       <%= link_to (image_tag promocode.pimage.url(:small), alt: promocode.p_title, title: promocode.p_image_title), promocode %>
      <% end %>
+     
     </div>
     <div class="inner inner_top">
       <span class="regular"><em><%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF</em> + free shipping</span>
@@ -41,26 +42,30 @@
         <div class="code_main">
           <button class="copy"><%= promocode.p_promocode %></button>
           <!-- <div>
-            <span class="copy"><code><%= promocode.p_promocode %></code></span>
+            <span class="copied"><code><%= promocode.p_promocode %></code></span>
             <button class="copy"><span class="icon-copy"></span>COPY</button>
           </div> -->
         </div>
         <div class="confirmation"><span class="icon-checkmark"></span></div>
 
-        <!-- <p class="mobile_code"><span>Take <strong><%= promocode.p_percentage %>% off at $<%= promocode.p_list_price %></strong> with promo code: <strong class="m_codes"><%= promocode.p_promocode %></strong></span></p>--><span class="ex_date ex_date_new">Expiration Date : <%= promocode.p_end_date %></span><em>* Click and copy this code then apply it at your checkout</em><em>* Pricing may change and promotional codes can expire fast.</em>
-
+        <!-- <p class="mobile_code"><span>Take <strong><%= promocode.p_percentage %>% off at $<%= promocode.p_list_price %></strong> with promo code: <strong class="m_codes"><%= promocode.p_promocode %></strong></span></p>-->
+        <em>* Pricing may change and promotional codes can expire fast.</em>
+        <span class="ex_date ex_date_new">* Expiration Date : <%= promocode.p_end_date %></span>
+        <em>* Click and copy this code then apply it at your checkout</em>
         <% if can? :update, @promocode %>
          <div class="admin clearfix">
-          <ul>
-           <li><%= link_to 'Show', promocode %></li>
-           <li><%= link_to 'Edit', edit_promocode_path(promocode) %></li>
-           <li><%= link_to 'Destroy', promocode, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-          </ul>
-         </div><!--/.amdin-->
+           <%= link_to 'Show', promocode %> |
+           <%= link_to 'Edit', edit_promocode_path(promocode) %> |
+           <%= link_to 'Destroy', promocode, method: :delete, data: { confirm: 'Are you sure?' } %>
+         </div>
         <% end %>
       </div>
     </div> 
-    <div class="deal_btn promo_btn"><a target="_blank" href="<%= promocode.p_link %>">Use Code at Amazon</a></div>
+    <div class="deal_btn promo_btn">
+      <div class="code_main"><button class="copy copy_m"><%= promocode.p_promocode %></button></div>
+      <div class="confirmation_m"><span class="icon-checkmark"></span></div>
+      <a target="_blank" href="<%= promocode.p_link %>">Use Code at AMAZON</a>
+    </div>
   </div>
 <% end %>
    
