--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -330,6 +330,7 @@
         
         
         $('.confirmation').hide().html('COPIED <b>' + btntxt).fadeIn(100).delay(800).fadeOut(300);
+        $('.confirmation_m').hide().html('COPIED <b>' + btntxt).fadeIn(100).delay(400).fadeOut(200);
 
         $( '.main' ).trigger( "click" );
       });
