--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -82,6 +82,10 @@
             </div>
             <div class="confirmation"><span class="icon-checkmark"></span></div>
 
+            
+            <div class="code_main"><button class="copy copy_m"><%= @promocode.p_promocode %></button></div>
+            <div class="confirmation_m"><span class="icon-checkmark"></span></div>
+
            <div class="btn">
             <a class="m_btn p_btn" target="_blank" href="<%= @promocode.p_link %>">Check it out on &ensp;<em>Amazon</em></a>
            </div> 
