--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -266,7 +266,7 @@
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;font-size:10px;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;font-size:12px;}
   .codes .card_wrap .card .inner>.code_high>p>span>.m_codes{background:#000;color:#fff;padding:5px 10px;border-radius:10px;line-height:38px;}
-  .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:11px;color:#616161;}
+  .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:11px;color:#616161;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>ul{}
   .codes .card_wrap .card .inner>.code_high>ul>li{margin-bottom:10px;}
   .codes .card_wrap .card .inner>.code_high>ul>li>p{font-size:17px;}
@@ -275,11 +275,12 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>a{text-decoration:none;color:#08f;}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
-  .codes .card_wrap .card .deal_btn{float:none;width:100%;margin:10px 0;text-align:center;}
-  .codes .card_wrap .card .deal_btn a{text-decoration:none;margin:20px 0 0 0;padding:10px 20px;font-family: 'Montserrat', sans-serif;font-weight:bold;background:#000;color:#fff;display:block;border-radius:10px;}
+  .codes .card_wrap .card .deal_btn{float:none;width:100%;margin:0 0 10px 0;text-align:center;}
+  .codes .card_wrap .card .deal_btn a{font-size:18px;text-decoration:none;padding:10px 20px;font-family: 'Montserrat', sans-serif;background:#000;color:#fff;display:block;}
   .codes .card_wrap .card .deal_btn em{display:none;}
   .codes .card_wrap .card .deal_btn em.stock_m{color:#ff4d4d;text-align:left;margin-left:7px;display:block;margin-bottom:-20px;}
   .codes .card_wrap .card .deal_btn p{color:#ff3333;margin-top:10px;}
+  .codes .card_wrap .card .deal_btn .amz_color{color:#e47911;}
   .codes .rt_cnt .updating{display:none;font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;}
   .codes .rt_cnt .updating a{display:block;text-decoration:none;color:#fff;background:#000;padding:5px 10px;}
   .codes .rt_cnt .updating_m{display:block;text-align:center;margin:-15px 0 15px 0;}
