--- a/app/views/deals/_body_promocodes.html.erb
+++ b/app/views/deals/_body_promocodes.html.erb
@@ -62,7 +62,7 @@
       </div>
     </div> 
     <div class="deal_btn promo_btn">
-      <div class="code_main"><button class="copy copy_m"><%= promocode.p_promocode %></button></div>
+      <div class="code_main"><button class="copy_m"><%= promocode.p_promocode %></button></div>
       <div class="confirmation_m"><span class="icon-checkmark"></span></div>
       <a target="_blank" href="<%= promocode.p_link %>">Use Code at AMAZON</a>
     </div>
