--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -83,7 +83,7 @@
             <div class="confirmation"><span class="icon-checkmark"></span></div>
 
             
-            <div class="code_main"><button class="copy copy_m"><%= @promocode.p_promocode %></button></div>
+            <div class="code_main"><button class="copy_m"><%= @promocode.p_promocode %></button></div>
             <div class="confirmation_m"><span class="icon-checkmark"></span></div>
 
            <div class="btn">
