--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -348,18 +348,27 @@
       $('button.copy_m').click(function(){
         var btntxt = $(this).text();
         
-         var copy_m = $(this).parent().find('.copy_m').text();
+         var copy = $(this).parent().find('.copy_m').text();
          
          var $temp = $("<input>");
          $("body").append($temp);
-         $temp.val(copy_m).select();
-         document.execCommand("copy_m");
+         $temp.val(copy).select();
+         document.execCommand("copy");
          $temp.remove();    
         
-        $('.confirmation_m').hide().html('COPIED <b>' + btntxt).fadeIn(100).delay(400).fadeOut(200);
+        $('.confirmation_m').hide().html('COPIED <b>' + btntxt).fadeIn(100).delay(800).fadeOut(300);
 
+
+        // $( '.main' ).trigger( "click" );
       });
-    
+      
+      // $('.main div').click(function(){
+      //     var range = document.createRange();
+      //     var selection = window.getSelection();
+      //     range.selectNodeContents(this);
+      //     selection.removeAllRanges();
+      //     selection.addRange(range);
+      // });
     });
 
   </script>
