--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -109,7 +109,7 @@
   .codes .card_wrap .card .inner>em>span{font-size:15px;color:#ccc;text-decoration:line-through;margin-left:5px;}
 
 
-  .codes .card_wrap .card .inner>.code_high{border:1px solid #ccc;padding:15px;}
+  .codes .card_wrap .card .inner>.code_high{border:1px solid #ccc;padding:15px;position:relative;}
   .codes .card_wrap .card .inner>.code_high .extra_info{display:inline-block;font-size:13px;}
 
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
@@ -236,6 +236,7 @@
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;font-size:13px;font-weight:400;}
   .codes .card_wrap .card .inner>em>span{font-size:12px;color:#ccc;text-decoration:line-through;margin-left:5px;}
 
+  .codes .card_wrap .card .inner>.code_high{position:relative;}
   .codes .card_wrap .card .inner>.code_high .extra_info{}
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:700;}
