--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -12,7 +12,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner{}
 .show_wrap .show_box .show_inner .hotdeal_inner h2{font-weight:500;line-height:1.2;font-size:18px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2}
 
-.show_wrap .show_box .show_inner .hotdeal_inner p{font-size:15px;font-weight:400;margin:15px 0;}
+/*.show_wrap .show_box .show_inner .hotdeal_inner p{font-size:15px;font-weight:400;margin:15px 0;}*/
 .show_wrap .show_box .show_inner .hotdeal_inner .top_line{}
 .show_wrap .show_box .show_inner .hotdeal_inner .top_line span{text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;width:300px;overflow:hidden;display:inline-block;vertical-align:middle;font-weight:500;}
 .show_wrap .show_box .show_inner .hotdeal_inner .top_line em{font-weight:500;}
@@ -166,10 +166,16 @@
 
 
 
-
-
-
-
-
-
-
+.intheshow{width:300px;}
+.text_copied .container{display:flex;justify-content:center;align-items:center;width:100%;height:100%;}
+.text_copied .container .wrap{flex:0 1 37.5rem;margin:5px 0;}
+.text_copied .container .wrap .box{padding:10px;background-color:#fff;border:0.0625rem solid #607d8b;border-radius:0.1875rem;}
+.text_copied .container .wrap .box:not(:last-child){margin-bottom:1.5625rem;}
+.text_copied .container .wrap .box p{margin:0;font-size:15px;}
+[data-copy-text] + i.material-icons{transition:all 0.25s ease-in-out;position:absolute;top:0;right:0;background-color:#f5f5f4;padding:10px;color:#000;opacity:0.3;cursor:pointer;z-index:1;font-family:'Righteous', cursive;font-style:normal;}
+[data-copy-text] + i.material-icons:hover,
+[data-copy-text] + i.material-icons.active{background-color:#000;opacity:1;color:#fff;}
+@media screen and (max-width:640px){
+  .intheshow{width:100%;}
+  [data-copy-text] + i.material-icons{padding:12px;}
+}
