--- a/app/views/deals/_body_promocodes.html.erb
+++ b/app/views/deals/_body_promocodes.html.erb
@@ -39,14 +39,29 @@
 <!-- 
         <textarea readonly="readonly" class="code_area"><%= promocode.p_promocode %></textarea><button class="copycode">Copy</button> -->
 
-        <div class="code_main">
-          <button class="copy"><%= promocode.p_promocode %></button>
+        <!-- <div class="code_main"> -->
+          <!-- <button class="copy"><%= promocode.p_promocode %></button> -->
           <!-- <div>
             <span class="copied"><code><%= promocode.p_promocode %></code></span>
             <button class="copy"><span class="icon-copy"></span>COPY</button>
           </div> -->
-        </div>
-        <div class="confirmation"><span class="icon-checkmark"></span></div>
+        <!-- </div> -->
+        <!-- <div class="confirmation"><span class="icon-checkmark"></span></div> -->
+
+          <div class="text_copied">
+            <div class="container">
+              <div class="wrap">
+                <div class="box">
+                  <p data-copy-text=""><%= promocode.p_promocode %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
 
         <!-- <p class="mobile_code"><span>Take <strong><%= promocode.p_percentage %>% off at $<%= promocode.p_list_price %></strong> with promo code: <strong class="m_codes"><%= promocode.p_promocode %></strong></span></p>-->
         <em>* Pricing may change and promotional codes can expire fast.</em>
