--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -144,38 +144,19 @@
   .deals_card .m_btn{display:block;}
 }
 
-/* Copy Promocode */
-.code_main{}
-.code_main button{padding:10px;font-size:20px;width:300px;letter-spacing:7px;background:#000;color:#fff;margin-bottom:2px;}
-.code_main .copy_m{display:none;}
-.code_main div{width:300px;background:#fff;border:1px solid #ccc;padding:8px;border-radius:2px;position:relative;margin-bottom:5px;}
-.code_main div span.copied{height:17px;display:block;max-width:204px;overflow:hidden;white-space:nowrap;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-o-box-sizing:border-box;box-sizing:border-box;word-wrap:break-word;position:relative;top:-1px;}
-.code_main div span.copied code{font-weight:300;font-family:'Montserrat', sans-serif;letter-spacing:2px;}
-.code_main div button{position:absolute;height:100%;width:95px;right:0;top:0;background:#000;border:none;outline:none;color:#fff;cursor:pointer;}
-.code_main div button:active{background:#003580;transform:scale(0.9);}
-.icon-copy{font-size:11px;position:relative;top:-1px;margin-right:2px;}
-.confirmation{background:#feba01;color:#383838;padding:10px 15px;border-radius:3px;display:none;z-index:999;text-align:center;position:fixed;bottom:20px;left:20px;/*position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);*/}
-.code_line_m{display:none;}
-
-
-@media screen and (max-width:640px){
-  .code_main div{width:100%;}
-  .code_main button.copy{display:none;}
-  .code_main .copy_m{display:block;width:100%;padding:10px;font-size:20px;letter-spacing:7px;background:#000;color:#fff;margin-bottom:2px;text-align:center;}
-}
-
-
-
 .intheshow{width:300px;}
+.text_copied_pc{}
+.text_copied_m{display:none;}
 .text_copied .container{display:flex;justify-content:center;align-items:center;width:100%;height:100%;}
 .text_copied .container .wrap{flex:0 1 37.5rem;margin:5px 0;}
 .text_copied .container .wrap .box{padding:10px;background-color:#fff;border:0.0625rem solid #607d8b;border-radius:0.1875rem;}
 .text_copied .container .wrap .box:not(:last-child){margin-bottom:1.5625rem;}
 .text_copied .container .wrap .box p{margin:0;font-size:15px;}
-[data-copy-text] + i.material-icons{transition:all 0.25s ease-in-out;position:absolute;top:0;right:0;background-color:#f5f5f4;padding:10px;color:#000;opacity:0.3;cursor:pointer;z-index:1;font-family:'Righteous', cursive;font-style:normal;}
+[data-copy-text] + i.material-icons{transition:all 0.25s ease-in-out;position:absolute;top:0;right:0;padding:10px;color:#000;opacity:0.5;cursor:pointer;z-index:1;font-family:'Righteous', cursive;font-style:normal;}
 [data-copy-text] + i.material-icons:hover,
 [data-copy-text] + i.material-icons.active{background-color:#000;opacity:1;color:#fff;}
 @media screen and (max-width:640px){
-  .intheshow{width:100%;}
+  .text_copied_pc{display:none;}
+  .text_copied_m{display:block;width:100%;}
   [data-copy-text] + i.material-icons{padding:12px;}
 }
