--- a/app/views/deals/_body_promocodes.html.erb
+++ b/app/views/deals/_body_promocodes.html.erb
@@ -36,32 +36,11 @@
            <div class="m_tooltip_common m_tooltip_green"><span> + <%= promocode.p_coupon_deal %> off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
          <% end %>
       </div>
-<!-- 
-        <textarea readonly="readonly" class="code_area"><%= promocode.p_promocode %></textarea><button class="copycode">Copy</button> -->
-
-        <!-- <div class="code_main"> -->
-          <!-- <button class="copy"><%= promocode.p_promocode %></button> -->
-          <!-- <div>
-            <span class="copied"><code><%= promocode.p_promocode %></code></span>
-            <button class="copy"><span class="icon-copy"></span>COPY</button>
-          </div> -->
-        <!-- </div> -->
-        <!-- <div class="confirmation"><span class="icon-checkmark"></span></div> -->
-
-          <div class="text_copied">
-            <div class="container">
-              <div class="wrap">
-                <div class="box">
-                  <p data-copy-text=""><%= promocode.p_promocode %></p>
-                </div>
-              </div>
-            </div>
-          </div>
 
 
-
-
-
+      <div class="text_copied text_copied_pc">
+        <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= promocode.p_promocode %></p></div></div></div>
+      </div>
 
         <!-- <p class="mobile_code"><span>Take <strong><%= promocode.p_percentage %>% off at $<%= promocode.p_list_price %></strong> with promo code: <strong class="m_codes"><%= promocode.p_promocode %></strong></span></p>-->
         <em>* Pricing may change and promotional codes can expire fast.</em>
@@ -76,8 +55,10 @@
         <% end %>
       </div>
     </div> 
+    <div class="text_copied text_copied_m">
+      <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= promocode.p_promocode %></p></div></div></div>
+    </div>
     <div class="deal_btn promo_btn">
-      <div class="code_main"><div class="copy_m"><%= promocode.p_promocode %></div></div>
       <a target="_blank" href="<%= promocode.p_link %>">Use Code at AMAZON</a>
     </div>
   </div>
