--- a/app/views/recommends/_navbar.html.erb
+++ b/app/views/recommends/_navbar.html.erb
@@ -24,7 +24,7 @@
       <li><button class="filter-button btn btn-md" data-filter="home&kitchen">Home&Kitchen</button></li>
       <!-- <input type="text" class="form-control" placeholder="Search gift you want to"> -->
       </div>
-    <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="모바일 메뉴 닫기" />
+    <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="모바일 메뉴 닫기" /></button>
   </div>
 
 </div><!--./featured-->
