--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css?family=Righteous&display=swap&subset=latin-ext');
 h1,h2,h3,h4,h5,h6,p,ul,li,address,form,fieldset,legend,input,button,dl,dt,dd,table,thead,tbody,tfoot,tr,th,td{margin:0;padding:0;font-family:inherit;}
 /*기본여백 삭제, font-family:inherit;는 특정 태그는 body에서 지정한 서체를 상속받지 못함. 그래서 강제로 상속받도록 지정  */
+a{text-decoration:none;}
 a img{border:0;}/* a태그로 감싼 이미지의 파란 테두리 삭제 (ie9-10) */
 ul,li{list-style:none;}/* li앞에 동그라미 삭제 */
 em,address{font-style:normal;}
