--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -1,4 +1,4 @@
-/* For Store Page */
+/* For Store Station Page["/deals/stores"] */
 .st_warp{}
 .st_warp .st_top_warp .st_top{float:left;width:68%;margin:1%;}
 .st_warp .st_top_warp .st_top .more_btn p{float:right;color:#3498db;}
@@ -8,12 +8,13 @@
 .st_warp .st_right{border-left:1px solid #ccc;}*/
 .st_warp .st_box{border-bottom:1px solid #ccc;padding-top:1%;}
 .st_warp .st_box .st_image{float:left;width:18%;margin:1%;}
-.st_warp .st_box .st_image img{width:100%;height:70px;vertical-align:middle;}
-.st_warp .st_box .inner{float:left;width:78%;margin:1%;padding:7px 7px 0 0;}
-.st_warp .st_box .inner p{text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;width:310px;overflow:hidden;word-break:break-word;}
+.st_warp .st_box .st_image img{width:100%;height:70px;vertical-align:middle;object-fit:contain;}
+.st_warp .st_box .inner{float:left;width:77%;margin-left:3%;padding:7px 7px 0 0;height:90px;}
+.st_warp .st_box .inner p{text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;width:310px;overflow:hidden;word-break:break-word;font-size:13px;}
 .st_warp .st_box .inner p .st_title{background:yellow;}
 .st_warp .st_box .inner em{}
-.st_warp .st_box .inner span{line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2}
+.st_warp .st_box .inner span{line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2;font-size:13px;}
+.st_warp .st_box .inner .store_code{margin:5px 0 3px 0;color:#616161;}
 .st_warp .st_middle{margin-top:30px;}
 .st_warp .st_middle .deals_card{width:18%;}
 .st_warp .st_middle .st_middle_box{margin-bottom:30px;}
@@ -27,7 +28,7 @@
 .tab-menu-wp ul{list-style:none;padding:0;margin:0;}
 .clear{clear:both}
 .tab-menu-wp ul li{cursor:pointer;width:50%;text-align:center;display:block;color:#000;float:left;font-size:13px;padding-bottom:10px;}
-.active{border-bottom:3px solid #3498db;color:#08f;}
+.store_active{border-bottom:3px solid #3498db;color:#08f;}
 .tab-menu-text{width:100%;margin-top:10px;cursor:pointer;padding:3px 5px;transition:400ms all;}
 /*.tab-menu-text:hover{background:rgba(0,0,0,.4);}*/
 .tab-menu-img img{width:50px;height:50px;overflow:hidden;float:left;/*border-radius:100%;*/}
@@ -38,22 +39,48 @@
 .all-show{float:right;padding:30px 10px 0px 0;cursor:pointer;color:#3498db;font-size:15px;text-transform:uppercase}
 
 
-/* Store Promotions */
+/* Store Promotions ["/storepromotions"]*/
 .sp_wrap{margin-top:35px;font-family: 'Montserrat', sans-serif;}
 .sp_wrap .sp_left{float:left;width:25%;margin-right:2%;border:1px solid #ccc;border-radius:10px;padding:10px 10px 10px 20px;}
 .sp_wrap .sp_right{float:left;width:73%;}
 
-.sp_wrap .sp_right .sp_card{margin-bottom:20px;border-bottom:1px solid #ccc;padding-bottom:10px;}
+.sp_wrap .sp_right .sp_card{border-bottom:1px solid #ccc;padding:20px 0;}
 .sp_wrap .sp_right .sp_card .admin{font-size:12px;}
-.sp_wrap .sp_right .sp_image{float:left;width:15%;}
-.sp_wrap .sp_right .sp_image img{width:100%;height:70px;object-fit:contain;}
+.sp_wrap .sp_right .sp_image{float:left;width:15%;height:104.39px;position:relative;}
+.sp_wrap .sp_right .sp_image img{width:100%;height:70px;object-fit:cover;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);width:100%;}
 .sp_wrap .sp_right .inner{float:left;width:59%;margin:0 3%;}
 .sp_wrap .sp_right .inner .sp_title{margin:5px 0;font-weight:500;line-height:1.2;font-size:18px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2}
+.sp_wrap .sp_right .inner .sp_title a{color:#000;}
 .sp_wrap .sp_right .inner .sp_code{margin-bottom:5px;}
 .sp_wrap .sp_right .inner em{font-size:12px;color:#616161;}
+.sp_wrap .sp_right .inner em.code_em{display:block;margin:-5px 0 0 1px;}
+.sp_wrap .sp_right .inner .store_code{width:95%;}
 /*.sp_wrap .sp_right .inner .btn{margin-top:10px;}
 .sp_wrap .sp_right .inner .btn a{text-decoration:none;background:#000;color:#fff;padding:5px 20px;border-radius:10px;}*/
-.sp_wrap .sp_right .sp_btn{float:left;width:20%;position:relative;height:130px;}
+.sp_wrap .sp_right .sp_btn{float:left;width:20%;position:relative;height:104.39px;}
 .sp_wrap .sp_right .sp_btn a{text-decoration:none;background:#000;color:#fff;padding:20px;border-radius:10px;display:block;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);width:100%;}
+
+
+@media screen and (max-width:640px){
+  .sp_wrap .sp_left{display:none;}
+  .sp_wrap .sp_right{float:none;width:100%;}
+  .sp_wrap .sp_right .sp_card{float:left;width:48%;margin:1%;box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);padding: 5px 10px 10px 10px;}
+  .sp_wrap .sp_right .sp_image{float:none;width:100%;}
+  .sp_wrap .sp_right .inner{float:none;width:100%;}
+  .sp_wrap .sp_right .inner .sp_title{font-size:12px;}
+  .sp_wrap .sp_right .inner em{font-size:10px;}
+  .sp_wrap .sp_right .inner em.code_em{margin-top:16px;}
+  .sp_wrap .sp_right .inner .text_copied .container .wrap .box{padding:3px;}
+  .sp_wrap .sp_right .inner .text_copied .container .wrap .box p{font-size:10px;text-align:center;}
+  .sp_wrap .sp_right .inner [data-copy-text] + i.material-icons{font-size:10px;padding:2px;right:0;left:50%;top:23px;transform:translate(-50%, 0);text-align:center;border:1px solid #000;width:102%;}
+  .sp_wrap .sp_right .sp_btn{float:none;width:100%;position:static;height:auto;margin-top:10px;}
+  .sp_wrap .sp_right .sp_btn a{padding:15px;text-align:center;position:static;padding:15px;border-radius:10px;display:block;top:0;left:;transform:translate(0, 0);width:100%;}
+}
+
+
+
+
+
+
 
 
