--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -74,7 +74,7 @@
   .sp_wrap .sp_right .inner .text_copied .container .wrap .box p{font-size:10px;text-align:center;}
   .sp_wrap .sp_right .inner [data-copy-text] + i.material-icons{font-size:10px;padding:2px;right:0;left:50%;top:23px;transform:translate(-50%, 0);text-align:center;border:1px solid #000;width:102%;}
   .sp_wrap .sp_right .sp_btn{float:none;width:100%;position:static;height:auto;margin-top:10px;}
-  .sp_wrap .sp_right .sp_btn a{padding:15px;text-align:center;position:static;padding:15px;border-radius:10px;display:block;top:0;left:;transform:translate(0, 0);width:100%;}
+  .sp_wrap .sp_right .sp_btn a{padding:15px;text-align:center;position:static;padding:15px;border-radius:10px;display:block;top:0;left:0;transform:translate(0, 0);width:100%;}
 }
 
 
